Orbit controller for r71

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>Three.js</title>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r71/three.min.js"></script>
-		<script src="http://threejs.org/examples/js/controls/OrbitControls.js"></script>
+		<script src="OrbitControls.js"></script>
 		<script src="ImageUtils.js"></script>
 		<script src="Test.js"></script>
 		<style>
@@ -20,5 +20,5 @@
 	<body onload="init()" onkeypress="changePlanet()">
 		<div id="container" style="width:100%;height:100%;"></div>
 	</body>
-	
+
 </html>
